understanding value of