@@ -2,7 +2,8 @@ package practice1;
 
 public class UnderValueOf {
     public static void main(String[] args) {
-       Integer obj = new Integer(10);
-        System.out.println(Integer.valueOf(10));
+//       Integer obj = new Integer(10);
+        char x = '@';
+        System.out.println(Integer.valueOf(x));
     }
 }
